Fix the localization error

--- a/src/main/resources/io/jenkins/plugins/hugo/HugoBuilder/config_zh_CN.properties
+++ b/src/main/resources/io/jenkins/plugins/hugo/HugoBuilder/config_zh_CN.properties
@@ -25,6 +25,6 @@ Publish\ Branch=\u53D1\u5E03\u5206\u652F
 Credentials=\u51ED\u636E
 Author\ Name=\u4F5C\u8005\u540D\u79F0
 Author\ Email=\u4F5C\u8005\u90AE\u7BB1
-Committer\ Name\uFF1D\u63D0\u4EA4\u8005\u540D\u79F0
-Committer\ Email\uFF1D\u63D0\u4EA4\u8005\u90AE\u7BB1
-Commit\ Log\uFF1D\u63D0\u4EA4\u65E5\u5FD7
+Committer\ Name=\u63D0\u4EA4\u8005\u540D\u79F0
+Committer\ Email=\u63D0\u4EA4\u8005\u90AE\u7BB1
+Commit\ Log=\u63D0\u4EA4\u65E5\u5FD7
