add support for git publish
add more config for hugo builder

--- a/src/main/resources/io/jenkins/plugins/hugo/HugoBuilder/config_zh_CN.properties
+++ b/src/main/resources/io/jenkins/plugins/hugo/HugoBuilder/config_zh_CN.properties
@@ -20,6 +20,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-hugo.builder.name=Hugo Builder
-hugo.publisher.git.submodule=Hugo Git Submodule Publisher
-hugo.publisher.git=Hugo Git Publisher
+Base\ Url=\u53D1\u5E03\u5730\u5740
+Destination=\u53D1\u5E03\u76EE\u5F55
+Verbose=\u8F93\u51FA\u8BE6\u7EC6
