--- a/src/main/resources/io/jenkins/plugins/hugo/Messages_zh_CN.properties
+++ b/src/main/resources/io/jenkins/plugins/hugo/Messages_zh_CN.properties
@@ -22,3 +22,4 @@
 
 hugo.builder.name=Hugo \u6784\u5EFA
 hugo.publisher.git.submodule=Hugo Git \u5B50\u6A21\u5757\u53D1\u5E03
+hugo.publisher.git=Hugo Git \u53D1\u5E03
