--- a/src/main/resources/io/jenkins/plugins/hugo/HugoGitPublisher/config_zh_CN.properties
+++ b/src/main/resources/io/jenkins/plugins/hugo/HugoGitPublisher/config_zh_CN.properties
@@ -20,6 +20,12 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-hugo.builder.name=Hugo Builder
-hugo.publisher.git.submodule=Hugo Git Submodule Publisher
-hugo.publisher.git=Hugo Git Publisher
+Target\ Url=\u76EE\u6807 URL
+Publish\ Directory=\u53D1\u5E03\u76EE\u5F55
+Publish\ Branch=\u53D1\u5E03\u5206\u652F
+Credentials=\u51ED\u636E
+Author\ Name=\u4F5C\u8005\u540D\u79F0
+Author\ Email=\u4F5C\u8005\u90AE\u7BB1
+Committer\ Name=\u63D0\u4EA4\u8005\u540D\u79F0
+Committer\ Email=\u63D0\u4EA4\u8005\u90AE\u7BB1
+Commit\ Log=\u63D0\u4EA4\u65E5\u5FD7
